<resources>
    <string name="app_name">依计行事</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_check_login">检查用户</string>
    <string name="title_activity_register">注册</string>
    
    <string name="register_username_null">用户名不能为空</string>
    <string name="register_loading_check_user">正在检查用户名...</string>
    <string name="register_save_user">正在注册...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_checking">正在登录...</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_year_plan_making">YearPlanMakingActivity</string>
    <string name="save_year_plan_detail">正在保存年计划...</string>

    <string name="save_year_plan_check_title_empty">请输入年计划标题</string>
    <string name="save_year_plan_check_content_empty">请输入年计划内容</string>
    <string name="save_year_plan_check_month_empty">某些月份没有制定计划</string>

    <string name="save_year_plan_success">保存成功！</string>
    <string name="save_year_plan_fail">保存失败！</string>
    <string name="save_year_plan_repeat">年计划重复!</string>
    <string name="save_year_plan_unknown_error">未知错误！</string>

    <!--activity_check_login.xml-->
    <string name="login_check_button_login_text">登录</string>
    <string name="login_check_button_register_text">注册</string>
    <string name="login_check_tip_text">你的成功，需要捷径</string>

    <!--activity_main.xml-->
    <string name="activity_main_bottom_bar_home_text">主页</string>
    <string name="activity_main_bottom_bar_plan_text">我的计划</string>
    <string name="activity_main_bottom_bar_me_text">个人中心</string>
    <string name="activity_main_press_again_exit">再按一次退出程序</string>

    <!--fragment_my_plan.xml-->
    <string name="my_plan_options_make_year_plan">制定年计划</string>
    <string name="my_plan_options_make_month_plan">制定月计划</string>
    <string name="my_plan_options_make_week_plan">制定周计划</string>
    <string name="my_plan_options_make_custom_plan">自定义计划</string>

    <string name="my_plan_options_search_year_plan">查看年计划</string>
    <string name="my_plan_options_search_month_plan">查看月计划</string>
    <string name="my_plan_options_search_week_plan">查看周计划</string>
    <string name="my_plan_options_search_custom_plan">查看自定义计划</string>
    <string name="my_plan_options_search_completed_plan">已完成的计划</string>
    <string name="my_plan_options_search_ongoing_plan">正在进行的计划</string>
    <string name="my_plan_options_search_delayed_plan">延期的计划</string>

    <string name="my_plan_options_system_grade">系统评价</string>


    <!--fragment_me.xml-->
    <string name="me_user_info">点击登录</string>
    <string name="me_user_logout">注销</string>
    <string name="me_plan_reminder">计划提醒</string>
    <string name="me_message_push">消息推送</string>
    <string name="me_introduction">使用帮助</string>
    <string name="me_feedback">问题反馈</string>

    <!--fragment_make_year_plan.xml-->
    <string name="make_year_plan_save">保存</string>


    <!--layout_login.xml-->
    <string name="login_button_text">登录</string>
    <string name="login_forget_passwd">忘记密码</string>
    <string name="login_register_user">注册用户</string>
    <string name="login_username_empty">请输入用户名</string>
    <string name="login_passwd_empty">请输入密码</string>
    <string name="login_success">登录成功!</string>
    <string name="login_user_or_passwd_error">用户名或密码错误！</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello me fragment</string>
    <string name="title_activity_month_plan_making">MonthPlanMakingActivity</string>
    <string name="title_activity_month_plan_init">MonthPlanInitActivity</string>
    <string name="title_activity_month_plan_choose_month">MonthPlanChooseMonthActivity</string>
    <string name="title_activity_make_month_plan_detail">MakeMonthPlanDetailActivity</string>
    <string name="title_activity_week_plan_init">WeekPlanInitActivity</string>
</resources>
