<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yjxs.zn.yijixingshi.fragment.MeFragment"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_profile_background_height"
        android:background="@mipmap/top_background">
        <ImageView
            android:id="@+id/img_prifile"
            android:layout_width="@dimen/me_profile_size"
            android:layout_height="@dimen/me_profile_size"
            android:background="@mipmap/profle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/me_profile_marginleft"
            />
        <TextView
            android:layout_toRightOf="@id/img_prifile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/me_user_info_marginleft"
            android:text="@string/me_user_info"
            android:layout_centerVertical="true"
            android:textSize="@dimen/me_user_info_textsize"
            android:textColor="@color/me_user_text_color"
            />
        <Button
            android:layout_width="@dimen/me_logout_width"
            android:layout_height="@dimen/me_logout_height"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/me_logout_marginright"
            android:text="@string/me_user_logout"
            android:background="@drawable/round_button_selector2"
            android:textColor="@color/me_user_text_color"
            android:textSize="@dimen/me_logout_textsize"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_plan_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/my_plan_option_paddingtop_down"
        android:paddingBottom="@dimen/my_plan_option_paddingtop_down"
        >
        <ImageView
            android:id="@+id/img_circle_background_1"
            android:layout_width="@dimen/me_plan_reminder_img_size"
            android:layout_height="@dimen/me_plan_reminder_img_size"
            android:background="@drawable/circle_color_background_yellow"
            android:layout_marginLeft="@dimen/my_plan_img_marginleft"
            android:layout_centerVertical="true"
            android:src="@mipmap/alarm"/>
        <TextView
            android:layout_toRightOf="@id/img_circle_background_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_plan_reminder"
            android:layout_marginLeft="@dimen/my_plan_text_marginleft"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/me_img_plan_reminder"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/open_switch"
            android:layout_marginRight="@dimen/my_plan_getin_marginright"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"/>
    <RelativeLayout
        android:id="@+id/layout_msg_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/my_plan_option_paddingtop_down"
        android:paddingBottom="@dimen/my_plan_option_paddingtop_down"
        >
        <ImageView
            android:id="@+id/img_circle_background_2"
            android:layout_width="@dimen/me_plan_reminder_img_size"
            android:layout_height="@dimen/me_plan_reminder_img_size"
            android:background="@drawable/circle_color_background_yellow"
            android:layout_marginLeft="@dimen/my_plan_img_marginleft"
            android:layout_centerVertical="true"
            android:src="@mipmap/msg_push"/>
        <TextView
            android:layout_toRightOf="@id/img_circle_background_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_message_push"
            android:layout_marginLeft="@dimen/my_plan_text_marginleft"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/me_img_message_push"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/open_switch"
            android:layout_marginRight="@dimen/my_plan_getin_marginright"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"/>
    <RelativeLayout
        android:id="@+id/layout_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/my_plan_option_paddingtop_down"
        android:paddingBottom="@dimen/my_plan_option_paddingtop_down"
        >
        <ImageView
            android:id="@+id/img_circle_background_3"
            android:layout_width="@dimen/me_plan_reminder_img_size"
            android:layout_height="@dimen/me_plan_reminder_img_size"
            android:background="@drawable/circle_color_background_yellow"
            android:layout_marginLeft="@dimen/my_plan_img_marginleft"
            android:layout_centerVertical="true"
            android:src="@mipmap/lamp"/>
        <TextView
            android:layout_toRightOf="@id/img_circle_background_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_introduction"
            android:layout_marginLeft="@dimen/my_plan_text_marginleft"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/my_plan_getin_size"
            android:layout_height="@dimen/my_plan_getin_size"
            android:background="@mipmap/get_in"
            android:layout_marginRight="@dimen/my_plan_getin_marginright"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"/>
    <RelativeLayout
        android:id="@+id/layout_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/my_plan_option_paddingtop_down"
        android:paddingBottom="@dimen/my_plan_option_paddingtop_down"
        >
        <ImageView
            android:id="@+id/img_circle_background_4"
            android:layout_width="@dimen/me_plan_reminder_img_size"
            android:layout_height="@dimen/me_plan_reminder_img_size"
            android:background="@drawable/circle_color_background_yellow"
            android:layout_marginLeft="@dimen/my_plan_img_marginleft"
            android:layout_centerVertical="true"
            android:src="@mipmap/feedback"/>
        <TextView
            android:layout_toRightOf="@id/img_circle_background_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_feedback"
            android:layout_marginLeft="@dimen/my_plan_text_marginleft"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/my_plan_getin_size"
            android:layout_height="@dimen/my_plan_getin_size"
            android:background="@mipmap/get_in"
            android:layout_marginRight="@dimen/my_plan_getin_marginright"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"/>

</LinearLayout>
